# src/controller/searchController/index.mjs
@@ -73,7 +73,7 @@ export const searchProfessionalsHighlightsWeek = async (req, res) => {
         status: 0,
         userSpecialties: 0,
         userServicePreferences: 0,
-        userAccessibilityPreferences: 0,
+        accessibility: 0,
         __v: 0,
         userType: 0,
       },
@@ -179,7 +179,7 @@ export const searchProfessionalBySpeciality = async (req, res) => {
         status: 0,
         userSpecialties: 0,
         userServicePreferences: 0,
-        userAccessibilityPreferences: 0,
+        accessibility: 0,
         __v: 0,
         userType: 0,
       },
@@ -292,7 +292,7 @@ export const searchBar = async (req, res) => {
         status: 0,
         userSpecialties: 0,
         userServicePreferences: 0,
-        userAccessibilityPreferences: 0,
+        accessibility: 0,
         __v: 0,
         userType: 0,
       },
